# Modern_problems_of_applied_mathematics_and_scientific_software

./: README.md
Module2/LR1/report/: .~lock.Практические занятия по модулю 2.doc#  ПР1.docx  Практические занятия по модулю 2.doc
Module2/LR1/src/: .gitignore  README.md  main.cpp  meson.build  meson_options.txt
Module2/LR1/src/include/: M_estimate.hpp  concepts.hpp  distribution.hpp  utils.hpp
Module2/LR1/src/scripts/: install-vcpkg.sh  load-matplot.sh
Module2/LR1/src/subprojects/:  tabulate.wrap
